# cpp-annote

./: .gitignore  CMakeLists.txt  LICENSE  README.md
artifacts/: community1-embedding.json  community1-segmentation.json
golden/callhome_eng_idx0/: manifest.json  pipeline_snapshot.json  receptive_field.json
golden/callhome_eng_idx0/callhome_eng_data_idx0_head120s/: clustering.npz  diarization.json  discrete_diarization_exclusive.npz  discrete_diarization_overlap.npz  embedding_chunk0_spk0_ort.npz  embeddings.npz  exclusive_diarization.json  first_chunk_waveform.npz  golden_speaker_bounds.json  hard_clusters_final.npz  label_mapping.json  segmentations.npz  speaker_count_capped.npz  speaker_count_initial.npz  speaker_embeddings_output.npz  vbx_reference.npz
golden/examples/: .gitignore  README.md
onnxruntime-win-x64-1.27.0/: GIT_COMMIT_ID  README.md
onnxruntime-win-x64-1.27.0/include/: onnxruntime_c_api.h  onnxruntime_cxx_api.h  onnxruntime_cxx_inline.h  onnxruntime_ep_c_api.h  onnxruntime_ep_device_ep_metadata_keys.h  onnxruntime_session_options_config_keys.h
scripts/: README.md  add_first_chunk_waveform.py  build_cpp.sh  dump_diarization_golden.py  dump_golden.sh  embedding_slot_metrics.py  eval_callhome_cpp_vs_python.py  export.sh  export_cpp_annote_embedded.py  export_embedding_onnx.py  export_ort_embedded.py  export_segmentation_onnx.py  fetch_callhome_example_wav.py  gen_ort_json_embedded.py  generate_conversation.py  onnx_wrappers.py  parity_fingerprint.py  trace_diarization_parity.py  verify_onnx_parity.py  write_vbx_golden_reference.py
src/: annotation_support.h  clustering_vbx.cpp  clustering_vbx.h  community1_cpp_annote_embedded.cpp  community1_cpp_annote_embedded.h  community1_ort_embedded.h  community1_ort_json_embedded.cpp  community1_ort_json_embedded.h  compute_fbank.cpp  compute_fbank.h  cpp-annote-c.cpp  cpp-annote-c.h  cpp-annote-engine.h  cpp-annote-streaming.cpp  cpp-annote-streaming.h  cpp-annote.cpp  cpp-annote.h  embedding_ort_infer.cpp  embedding_ort_infer.h  filter_train.cpp  filter_train.h  hungarian.h  ort_dml_capi.h  parity_log.cpp  parity_log.h  plda_vbx.cpp  plda_vbx.h  scipy_linkage.cpp  scipy_linkage.h  wav_pcm_float32.h
tests/: annotation_golden_test.cpp  clustering_golden_test.cpp  embedding_golden_test.cpp  filter_ahc_golden_test.cpp  frozen_golden_inputs_test.cpp  full_segmentation_window_parity_test.cpp  knf_smoke_test.cpp  linkage_fcluster_golden_test.cpp  plda_fea_golden_test.cpp  reconstruct_golden_test.cpp  segmentation_golden_test.cpp  speaker_count_golden_test.cpp  vbx_parity_test.cpp
tools/: cpp-annote-cli.cpp
